attempt to fix body height on mobile

--- a/css/00_main.css
+++ b/css/00_main.css
@@ -51,6 +51,7 @@
 
 html, body {
     scroll-behavior: smooth;
+    height: 100dvh;
 }
 
 body {
